#-------------------------------------------------------------------------------
# Copyright (C) 2012, Robert Johansson <rob@raditex.nu>, Raditex Control AB
# All rights reserved.
#
# This file is part of rSCADA.
# http://www.rSCADA.se
# info@rscada.se
# 
#-------------------------------------------------------------------------------

PACKAGE		= @PACKAGE@
VERSION		= @VERSION@

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libcanopen.pc

SUBDIRS		= canopen bin
ACLOCAL		= aclocal -I .
ACLOCAL_AMFLAGS = -Werror -I m4
