#-------------------------------------------------------------------------------
# Copyright (C) 2012, Robert Johansson <rob@raditex.nu>, Raditex Control AB
# All rights reserved.
#
# This file is part of rSCADA.
# http://www.rSCADA.se
# info@rscada.se
# 
#-------------------------------------------------------------------------------

PACKAGE		= @PACKAGE@
VERSION		= @VERSION@

AM_CPPFLAGS	= -I$(top_builddir) -I$(top_srcdir)

pkginclude_HEADERS = canopen.h canopen-com.h 
lib_LTLIBRARIES	   = libcanopen.la
libcanopen_la_SOURCES = canopen.c canopen-com.c 

